--- a/ProjectFlower/src/css/style.css
+++ b/ProjectFlower/src/css/style.css
@@ -80,6 +80,12 @@ html {
     height: 2px;
     background-color: #000;
   }
+  @media screen and (max-width: 768px) {
+    font-size: 36px;
+  }
+  @media screen and (max-width: 576px) {
+    font-size: 24px;
+  }
 }
 
 .promo {
@@ -410,6 +416,9 @@ right – сдвиг справа */
 .works {
   padding-top: 80px;
   background-color: var(--light-color);
+  @media screen and (max-width: 768px) {
+    padding-top: 50px;
+  }
 }
 
 .works__grid {
@@ -422,6 +431,17 @@ right – сдвиг справа */
   img {
     width: 100%;
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
+  }
+  @media screen and (max-width: 768px) {
+    margin-top: 40px;
+    column-gap: 20px;
+    row-gap: 30px;
+  }
+  @media screen and (max-width: 576px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr) 1.5fr;
+    column-gap: 0px;
+    row-gap: 30px;
   }
 }
 
