--- a/ProjectFlower/src/css/style.css
+++ b/ProjectFlower/src/css/style.css
@@ -448,6 +448,9 @@ right – сдвиг справа */
 .inspiration {
   padding-top: 80px;
   background-color: var(--light-color);
+  @media screen and (max-width: 768px) {
+		padding-top: 50px;
+	}
 }
 
 .inspiration__grid {
@@ -461,21 +464,55 @@ right – сдвиг справа */
     width: 100%;
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
   }
+  @media screen and (max-width: 1200px) {
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(4, 1fr);
+		gap: 30px 20px;
+	}
+  @media screen and (max-width: 768px) {
+		margin-top: 40px;
+}
+ @media screen and (max-width: 576px) {
+		grid-template-columns: 1fr;
+		grid-template-rows: repeat(3, 1fr) 2.1fr 1fr 0.5fr;
+		row-gap: 20px;
+    column-gap: 0px;
+	}
 }
 
 .tenement {
   grid-column: 4/5;
   grid-row: 1/3;
+    @media screen and (max-width: 1200px) {
+    grid-column: 2/3;
+    grid-row: 2/4;
+  }
+  @media screen and (max-width: 576px) {
+		grid-row: auto;
+		grid-column: auto;
+	}
 }
 
 .sky {
   grid-column: 2/4;
+  @media screen and (max-width: 1200px) {
+    grid-column: 1/3;
+  }
+  @media screen and (max-width: 576px) {
+		grid-column: auto;
+	}
 }
+
+
+
 
 .customers {
   padding-top: 80px;
   padding-bottom: 100px;
   background-color: var(--light-color);
+   @media screen and (max-width: 768px) {
+    padding-top: 50px;
+  }
 }
 
 .customers__wrapper {
@@ -489,6 +526,24 @@ right – сдвиг справа */
     width: calc((100% - 90px) / 4);
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
   }
+  @media screen and (max-width: 768px) {
+    & {margin-top: 40px;
+    gap: 20px;
+  }
+  img {
+			width: calc((100% - 60px) / 4);
+		}
+}
+  @media screen and (max-width: 576px) {
+   & { margin-top: 30;
+    column-gap: 36px;
+			row-gap: 20px;
+			justify-content: space-between;
+  }
+  img {
+			width: calc((100% - 36px) / 2);
+		}
+	}
 }
 
 .footer {
