--- a/ProjectFlower/src/css/style.css
+++ b/ProjectFlower/src/css/style.css
@@ -449,8 +449,8 @@ right – сдвиг справа */
   padding-top: 80px;
   background-color: var(--light-color);
   @media screen and (max-width: 768px) {
-		padding-top: 50px;
-	}
+    padding-top: 50px;
+  }
 }
 
 .inspiration__grid {
@@ -465,32 +465,32 @@ right – сдвиг справа */
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
   }
   @media screen and (max-width: 1200px) {
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: repeat(4, 1fr);
-		gap: 30px 20px;
-	}
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 30px 20px;
+  }
   @media screen and (max-width: 768px) {
-		margin-top: 40px;
-}
- @media screen and (max-width: 576px) {
-		grid-template-columns: 1fr;
-		grid-template-rows: repeat(3, 1fr) 2.1fr 1fr 0.5fr;
-		row-gap: 20px;
+    margin-top: 40px;
+  }
+  @media screen and (max-width: 576px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr) 2.1fr 1fr 0.5fr;
+    row-gap: 20px;
     column-gap: 0px;
-	}
+  }
 }
 
 .tenement {
   grid-column: 4/5;
   grid-row: 1/3;
-    @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 1200px) {
     grid-column: 2/3;
     grid-row: 2/4;
   }
   @media screen and (max-width: 576px) {
-		grid-row: auto;
-		grid-column: auto;
-	}
+    grid-row: auto;
+    grid-column: auto;
+  }
 }
 
 .sky {
@@ -499,19 +499,16 @@ right – сдвиг справа */
     grid-column: 1/3;
   }
   @media screen and (max-width: 576px) {
-		grid-column: auto;
-	}
+    grid-column: auto;
+  }
 }
-
-
-
 
 .customers {
   padding-top: 80px;
   padding-bottom: 100px;
   background-color: var(--light-color);
-   @media screen and (max-width: 768px) {
-    padding-top: 50px;
+  @media screen and (max-width: 768px) {
+    padding: 50px 0;
   }
 }
 
@@ -527,23 +524,25 @@ right – сдвиг справа */
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
   }
   @media screen and (max-width: 768px) {
-    & {margin-top: 40px;
-    gap: 20px;
+    & {
+      margin-top: 40px;
+      gap: 20px;
+    }
+    img {
+      width: calc((100% - 60px) / 4);
+    }
   }
-  img {
-			width: calc((100% - 60px) / 4);
-		}
-}
   @media screen and (max-width: 576px) {
-   & { margin-top: 30;
-    column-gap: 36px;
-			row-gap: 20px;
-			justify-content: space-between;
+    & {
+      margin-top: 30;
+      column-gap: 36px;
+      row-gap: 20px;
+      justify-content: space-between;
+    }
+    img {
+      width: calc((100% - 36px) / 2);
+    }
   }
-  img {
-			width: calc((100% - 36px) / 2);
-		}
-	}
 }
 
 .footer {
@@ -555,15 +554,31 @@ right – сдвиг справа */
   font-weight: 400;
   font-size: 20px;
   color: var(--light-color);
+  @media screen and (max-width: 900px) {
+    flex-direction: column;
+    align-items: flex-start;
+    font-size: 16px;
+    row-gap: 30px;
+   padding: 30px var(--footer-padding-inline) 40px var(--footer-padding-inline);
+  }
+  @media screen and (max-width: 576px) {
+    align-items:center;
+  }
 }
 
 .addr {
   font-style: normal;
+   @media screen and (max-width: 576px) {
+  order: 3;
+}
 }
 
 .footer__tel {
   color: var(--light-color);
   text-decoration: none;
+   @media screen and (max-width: 576px) {
+  order: 2;
+}
 }
 
 .footer__social {
@@ -588,4 +603,13 @@ right – сдвиг справа */
       }
     }
   }
+  @media screen and (max-width: 1024px) {
+		column-gap: 27px;
+	}
+}
+   @media screen and (max-width: 576px) {
+    & {
+      order: 1;
+    }
+}
 }
